refactor(vendor): 重构供应商参数处理
- 将 JsonParam 替换为 JsonConfigParam- 使用枚举类统一参数定义
- 优化参数获取逻辑- 增加 OpenAiParam 和 OllamaParam 枚举类