@@ -19,15 +19,14 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.ResponseErrorHandler;
 import uw.ai.center.advisor.AiChatLoggerAdvisor;
 import uw.ai.center.advisor.AiMysqlChatMemory;
-
 import uw.ai.center.vendor.AiVendor;
 import uw.ai.center.vendor.AiVendorClientWrapper;
 import uw.ai.center.vo.AiModelConfigData;
-import uw.app.common.constant.JsonParamType;
-import uw.app.common.vo.JsonParam;
-import uw.app.common.vo.JsonParamBox;
+import uw.app.common.vo.JsonConfigBox;
+import uw.app.common.vo.JsonConfigParam;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -76,38 +75,15 @@ public class OpenAiVendor implements AiVendor {
      * Vendor参数信息集合，管理员可见。
      */
     @Override
-    public List<JsonParam> vendorParam() {
-        return List.of(
-                new JsonParam( JsonParamType.STRING, "api-path", "/v1/chat/completions", "api路径", "api路径" ),
-                new JsonParam( JsonParamType.FLOAT, "temperature", "0.8", "temperature",
-                        "要使用的采样温度，用于控制生成的完成项的明显创造性。较高的值将使输出更具随机性，而较低的值将使结果更加集中和确定。不建议为相同的completions请求修改 temperature 和top_p，因为这两个设置的交互很难预测。" ),
-                new JsonParam( JsonParamType.FLOAT, "frequency-penalty", "0.0f", "frequency-penalty", "介于 -2.0 和 2.0 " +
-                        "之间的数字。正值会根据新标记到目前为止在文本中的现有频率来惩罚新标记，从而降低模型逐字重复同一行的可能性。" ),
-                new JsonParam( JsonParamType.INT, "max-completion-tokens", "", "max-completion-tokens", "可以为完成生成的标记数的上限，包括可见的输出标记和推理标记。" ),
-                new JsonParam( JsonParamType.INT, "n", "1", "n", "为每个输入消息生成多少个聊天完成选项。请注意，您将根据所有选项中生成的令牌数量付费。将n保留为 1 以最大限度地降低成本。" ),
-                new JsonParam( JsonParamType.BOOLEAN, "store", "FALSE", "store", "是否存储此聊天完成请求的输出以在我们的模型中使用" ),
-                new JsonParam( JsonParamType.STRING, "output-modalities", "", "output-modalities", "您希望模型为此请求生成的 Output types。大多数模型都能够生成文本，这是默认设置。gpt-4o-audio" +
-                        "-preview模型也可用于生成音频。要请求此模型同时生成文本和音频响应，您可以使用：text，audio。不支持流式传输。" ),
-                new JsonParam( JsonParamType.STRING, "output-audio", "", "output-audio", "音频生成的音频参数。使用output-modalities：audio请求音频输出时是必需的。需要gpt-4o-audio-preview" +
-                        "模型，并且不支持流式完成。" ),
-                new JsonParam( JsonParamType.FLOAT, "presence-penalty", "", "presence-penalty", "介于 -2.0 和 2.0 之间的数字。正值根据新标记到目前为止是否出现在文本中来惩罚新标记，从而增加模型讨论新主题的可能性。" ),
-                new JsonParam( JsonParamType.STRING, "seed", "", "seed", "此功能目前处于 Beta 阶段。如果指定，我们的系统将尽最大努力进行确定性采样，以便具有相同种子和参数的重复请求应返回相同的结果。" ),
-                new JsonParam( JsonParamType.STRING, "stop", "", "stop", "最多 4 个序列，API 将在其中停止生成更多令牌。" ),
-                new JsonParam( JsonParamType.FLOAT, "top-p", "", "top-p", "使用温度进行采样的替代方法，称为核采样，其中模型考虑具有top_p概率质量的标记的结果。所以 0.1 意味着只考虑包含前 10% " +
-                        "概率质量的token。我们通常建议更改此温度或温度，但不能同时更改两者。" ),
-                new JsonParam( JsonParamType.SET_STRING, "tools", "", "tools", "模型可以调用的工具列表。目前，仅支持将函数作为工具。使用此函数可提供模型可能为其生成 JSON 输入的函数列表。" ),
-                new JsonParam( JsonParamType.STRING, "tool-choice", "", "tool-choice", "控制模型调用哪个 （如果有） 函数。none表示模型不会调用函数，而是生成一条消息。auto" +
-                        "表示模型可以在生成消息或调用函数之间进行选择。指定特定函数会强制模型调用该函数。none是不存在函数时的默认值。如果存在函数，则 auto是默认值。" ),
-                new JsonParam( JsonParamType.STRING, "user", "", "user", "代表您的最终用户的唯一标识符，可以帮助 OpenAI 监控和检测滥用行为。" ),
-                new JsonParam( JsonParamType.BOOLEAN, "parallel-tool-calls", "true", "parallel-tool-calls", "是否在工具使用过程中启用并行函数调用。" )
-        );
+    public List<JsonConfigParam> vendorParam() {
+        return Arrays.asList(OpenAiParam.Vendor.values()); // 自动获取所有枚举项
     }
 
     /**
      * model参数信息集合，运营商可见。
      */
     @Override
-    public List<JsonParam> modelParam() {
+    public List<JsonConfigParam> modelParam() {
         return List.of();
     }
 
@@ -115,10 +91,8 @@ public class OpenAiVendor implements AiVendor {
      * embed参数信息集合，仅管理员可见。
      */
     @Override
-    public List<JsonParam> embedParam() {
-        return List.of(
-                new JsonParam( JsonParamType.STRING, "api-path", "/v1/embeddings", "api路径", "api路径" )
-        );
+    public List<JsonConfigParam> embedParam() {
+        return Arrays.asList(OpenAiParam.Embed.values()); // 自动获取所有枚举项
     }
 
     /**
@@ -129,13 +103,13 @@ public class OpenAiVendor implements AiVendor {
      */
     @Override
     public AiVendorClientWrapper buildClientWrapper(AiModelConfigData aiModelConfigData) {
-        JsonParamBox vendorParamBox = aiModelConfigData.getVendorParamBox();
-        JsonParamBox embedParamBox = aiModelConfigData.getEmbedParamBox();
+        JsonConfigBox vendorParamBox = aiModelConfigData.getVendorParamBox();
+        JsonConfigBox embedParamBox = aiModelConfigData.getEmbedParamBox();
         OpenAiApi openAiApi = OpenAiApi.builder()
                 .baseUrl( aiModelConfigData.getApiUrl() )
                 .apiKey( new SimpleApiKey( aiModelConfigData.getApiKey() ) )
-                .completionsPath( vendorParamBox.getParam( "api-path" ) )
-                .embeddingsPath( embedParamBox.getParam( "api-path" ) )
+                .completionsPath( vendorParamBox.getParam( OpenAiParam.Vendor.API_PATH ) )
+                .embeddingsPath( embedParamBox.getParam( OpenAiParam.Embed.API_PATH ) )
                 .responseErrorHandler( new ResponseErrorHandler() {
                     @Override
                     public boolean hasError(ClientHttpResponse response) throws IOException {
@@ -153,30 +127,38 @@ public class OpenAiVendor implements AiVendor {
                     }
                 } )
                 .build();
+        // 初始化 ChatModel 和 EmbeddingModel
         ChatModel chatModel = OpenAiChatModel.builder()
                 .openAiApi( openAiApi )
-                .defaultOptions( OpenAiChatOptions.builder().model( aiModelConfigData.getModelMain() ).build() )
+                .defaultOptions( OpenAiChatOptions.builder()
+                        .model( aiModelConfigData.getModelMain() )
+                        .temperature( vendorParamBox.getDoubleParam( OpenAiParam.Vendor.TEMPERATURE ) )
+                        .frequencyPenalty( vendorParamBox.getDoubleParam( OpenAiParam.Vendor.FREQUENCY_PENALTY ) )
+                        .maxCompletionTokens( vendorParamBox.getIntParam( OpenAiParam.Vendor.MAX_COMPLETION_TOKENS ) )
+                        .N( vendorParamBox.getIntParam( OpenAiParam.Vendor.N ) )
+                        .store( vendorParamBox.getBooleanParam( OpenAiParam.Vendor.STORE ) )
+                        .presencePenalty( vendorParamBox.getDoubleParam( OpenAiParam.Vendor.PRESENCE_PENALTY ) )
+                        .seed( vendorParamBox.getIntParam( OpenAiParam.Vendor.SEED ) )
+                        .topP( vendorParamBox.getDoubleParam( OpenAiParam.Vendor.TOP_P ) )
+                        .parallelToolCalls( vendorParamBox.getBooleanParam( OpenAiParam.Vendor.PARALLEL_TOOL_CALLS ) )
+                        .build()
+                )
                 .build();
+
         EmbeddingModel embeddingModel = new OpenAiEmbeddingModel( openAiApi, MetadataMode.EMBED,
-                OpenAiEmbeddingOptions.builder().model( aiModelConfigData.getModelEmbed() ).build() );
+                OpenAiEmbeddingOptions.builder()
+                        .model( aiModelConfigData.getModelEmbed() )
+                        .build()
+        );
+
+        // 构建 ChatClient
         ChatClient chatClient = ChatClient.builder( chatModel )
-                // 实现 Chat Memory 的 Advisor
-                // 在使用 Chat Memory 时，需要指定对话 ID，以便 Spring AI 处理上下文。
                 .defaultAdvisors( new MessageChatMemoryAdvisor( new AiMysqlChatMemory(), "0:0", 10 ) )
-                // 实现 Logger 的 Advisor
                 .defaultAdvisors( new AiChatLoggerAdvisor() )
                 .defaultOptions( OpenAiChatOptions.builder()
-                        .temperature( vendorParamBox.getDoubleParam( "temperature" ) )
-                        .frequencyPenalty( vendorParamBox.getDoubleParam( "frequency-penalty" ) )
-                        .maxCompletionTokens( vendorParamBox.getIntParam( "max-completion-tokens" ) )
-                        .N( vendorParamBox.getIntParam( "n" ) )
-                        .store( vendorParamBox.getBooleanParam( "store" ) )
-                        .presencePenalty( vendorParamBox.getDoubleParam( "presence-penalty" ) )
-                        .seed( vendorParamBox.getIntParam( "seed" ) )
-                        .topP( vendorParamBox.getDoubleParam( "top-p" ) )
-                        .streamUsage( true )
-                        .parallelToolCalls( vendorParamBox.getBooleanParam( "parallel-tool-calls" ) )
-                        .build() )
+                        // 其他参数通过枚举获取
+                        .build()
+                )
                 .build();
         return new AiVendorClientWrapper( aiModelConfigData, chatClient, embeddingModel );
     }
